Added some new codes

--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
     <div id="main">
         <h1>Get <strong class="diff">insights</strong> that help your business grow.</h1>
         <p class="p-0">Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
-        <div class="sub-main">
-            <p class="p-1">10K+</p>
-            <p class="p-2">COMPANIES</p>
-            <p class="p-1">314</p>
-            <p class="p-2">TEMPLATES</p>
-            <p class="p-1">12M+</p>
-            <p class="p-2">QUERIES</p>
+        <div id="sub-main">
+            <div class="sub-main1">
+                <p>10K+</p>
+                <p>314</p>
+                <p>12M+</p>
+            </div>
+            <div class="sub-main2">
+                <p class="p1">COMPANIES</p>
+                <p class="p2">TEMPLATES</p>
+                <p class="p3">QUERIES</p>
+            </div>
             <img src="Images/image-header-desktop.jpg" alt="Desktop header" class="img">
         </div>
     </div>
