Done for desktop aize

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Stats-preview-card</title>
 </head>
 <body>
-    <div id="main">
+    <main id="main">
         <h1>Get <strong class="diff">insights</strong> that help your business grow.</h1>
         <p class="p-0">Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
         <div id="sub-main">
@@ -22,7 +22,9 @@
                 <p class="p2">TEMPLATES</p>
                 <p class="p3">QUERIES</p>
             </div>
-            <img src="Images/image-header-desktop.jpg" alt="Desktop header" class="img">
+            <div class="image">
+                <div class="overlay"></div>
+            </div>
         </div>
     </div>
 </body>
