Finsihed for S screen

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang="en-us">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,25 +9,30 @@
     <link rel="stylesheet" href="stats.css">
     <title>Stats-preview-card</title>
 </head>
+
 <body>
     <main id="main">
         <h1>Get <strong class="diff">insights</strong> that help your business grow.</h1>
         <p class="p-0">Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
-        <div id="sub-main">
+
+        <div id="sub-main">    
             <div class="sub-main1">
-                <p>10K+</p>
-                <p>314</p>
-                <p>12M+</p>
+                <p class="p1">10K+</p>
+                <p class="p2">314</p>
+                <p class="p3">12M+</p>
             </div>
+
             <div class="sub-main2">
                 <p class="p1">COMPANIES</p>
                 <p class="p2">TEMPLATES</p>
                 <p class="p3">QUERIES</p>
             </div>
+
             <div class="image">
                 <div class="overlay"></div>
             </div>
         </div>
-    </div>
+
+    </main>
 </body>
 </html>
